[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/GraphicNodes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/josefinsans-bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/localUI/EN/playgamebutton-animation 1-000.png" type="Texture" id=3]
[ext_resource path="res://assets/images/localUI/EN/gallerybutton-animation 1-000.png" type="Texture" id=4]
[ext_resource path="res://assets/images/localUI/EN/gauntletmenubutton-animation 1-000.png" type="Texture" id=5]
[ext_resource path="res://assets/images/UI/femalebutton-animation 1-000.png" type="Texture" id=6]
[ext_resource path="res://assets/images/UI/logo-animation 1-000.png" type="Texture" id=7]
[ext_resource path="res://assets/images/UI/malebutton-animation 1-000.png" type="Texture" id=8]
[ext_resource path="res://scripts/Title.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 248 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "title"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 192 ), Vector2( 640, 152 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.690196, 0.305882, 0.0117647, 1 )
animation = "menu"

[node name="copyright" type="Label" parent="."]
margin_left = 440.0
margin_top = 648.0
margin_right = 827.0
margin_bottom = 711.0
custom_fonts/font = SubResource( 1 )
text = "2022 v1.3
Original game by Nitro
Modified by X-Guy"
align = 1

[node name="Play" type="Node2D" parent="."]

[node name="play_s" type="Sprite" parent="Play"]
position = Vector2( 640, 453.5 )
texture = ExtResource( 3 )

[node name="play_b" type="Button" parent="Play"]
margin_left = 464.0
margin_top = 400.0
margin_right = 816.0
margin_bottom = 504.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Gauntlet" type="Node2D" parent="."]

[node name="gauntlet_s" type="Sprite" parent="Gauntlet"]
position = Vector2( 640, 581.5 )
texture = ExtResource( 5 )

[node name="gauntlet_b" type="Button" parent="Gauntlet"]
margin_left = 464.0
margin_top = 528.0
margin_right = 816.0
margin_bottom = 632.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Gallery" type="Node2D" parent="."]
visible = false

[node name="gallery_s" type="Sprite" parent="Gallery"]
position = Vector2( 1024, 517.5 )
texture = ExtResource( 4 )

[node name="gallery_b" type="Button" parent="Gallery"]
margin_left = 848.0
margin_top = 464.0
margin_right = 1200.0
margin_bottom = 568.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="BodyType" type="Node2D" parent="."]

[node name="malebutton_s" type="Sprite" parent="BodyType"]
position = Vector2( 80, 464 )
scale = Vector2( 0.468, 0.468 )
texture = ExtResource( 8 )
centered = false

[node name="femalebutton_s" type="Sprite" parent="BodyType"]
position = Vector2( 240, 448 )
scale = Vector2( 0.468, 0.468 )
texture = ExtResource( 6 )
centered = false

[node name="male_b" type="Button" parent="BodyType"]
margin_left = 80.0
margin_top = 448.0
margin_right = 176.0
margin_bottom = 640.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="female_b" type="Button" parent="BodyType"]
margin_left = 240.0
margin_top = 448.0
margin_right = 336.0
margin_bottom = 640.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Bodytype" type="Label" parent="BodyType"]
margin_left = 128.0
margin_top = 408.0
margin_right = 340.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 1 )
text = "BODY_KEY"

[node name="logo" type="Node2D" parent="."]

[node name="Title" type="Sprite" parent="logo"]
position = Vector2( 640, 248 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="logo/Title"]
autoplay = "title"
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/title = SubResource( 3 )

[connection signal="pressed" from="Play/play_b" to="." method="_on_play_b_pressed"]
[connection signal="pressed" from="Gallery/gallery_b" to="." method="_on_gallery_b_pressed"]
[connection signal="pressed" from="BodyType/male_b" to="." method="_on_male_b_pressed"]
[connection signal="pressed" from="BodyType/female_b" to="." method="_on_female_b_pressed"]
